force-app/main/default/objects/refedge__Event__c/fields/refedge__Event_Date__c.field-meta.xml
<CustomField>
    <fullName>refedge__Event_Date__c</fullName>
    <label>Event Date</label>
    <type>DateTime</type>
</CustomField>