force-app/main/default/objects/refedge__Event__c/fields/refedge__Event_URL__c.field-meta.xml
<CustomField>
    <fullName>refedge__Event_URL__c</fullName>
    <label>Event URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>