force-app/main/default/objects/refedge__Event__c/fields/refedge__Prospect_Email_Notification__c.field-meta.xml
<CustomField>
    <fullName>refedge__Prospect_Email_Notification__c</fullName>
    <label>Prospect Email Notification</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>