force-app/main/default/objects/refedge__Event__c/listViews/refedge__All.listView-meta.xml
<ListView>
    <fullName>refedge__All</fullName>
    <columns>refedge__Event_Date__c</columns>
    <columns>refedge__Status__c</columns>
    <columns>NAME</columns>
    <columns>refedge__Account__c</columns>
    <columns>refedge__Event_URL__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>